update repo description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instagram",
   "version": "1.0.0",
-  "description": "crawl a instagram user's all resources using puppeteer",
+  "description": "instagram original resources downloader",
   "main": "index.js",
   "repository": "git@github.com:troywith77/instagram.git",
   "author": "troywith77 <ruitang307@gmail.com>",
